<resources>
    <string name="app_name">samvel_homework_lesson_6</string>
    <string name="twister_description">Tender pieces of chicken fillet with crispy spicy or original bread crumbs, juicy lettuce, slices of tomato, tender sauce, wrapped in a wheat loshik and fried in toast</string>
    <string name="type">տեսակ</string>
    <string name="type_spicy">spicy</string>
    <string name="type_original">original</string>
    <string name="havelum">հավելում</string>
    <string name="cheese_slice_1">պանրի 1 շերտ</string>
    <string name="cheese_slice_2">պանրի 2 շերտ</string>
    <string name="cheese_slice_3">պանրի 3 շերտ</string>
    <string name="price_cheese_1">+ 150 AMD</string>
    <string name="price_cheese_2">+ 300 AMD</string>
    <string name="price_cheese_3">+ 450 AMD</string>
    <string name="comment_order_placeholder">Your comments to the order</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="push_notifications">PUSH NOTIFICATIONS</string>
    <string name="preferences">Preferences</string>
    <string name="match_alerts">Match Alerts</string>
    <string name="match_alerts_2">Get instant notifications for match events</string>
    <string name="football">Football</string>
    <string name="tennis">Tennis</string>
    <string name="basketball">Basketball</string>
    <string name="hockey">Hockey</string>
    <string name="cricket">Cricket</string>
    <string name="in_app_notifis">IN-APP NOTIFICATIONS</string>
    <string name="fav_match">Favourite Match</string>
    <string name="fav_league">Favourite League</string>
    <string name="change_pass">Փոխել գաղտնաբառը</string>
    <string name="pin_code">Սահմանել PIN կոդ մուտք գործելու համար</string>
    <string name="close_blocking">Փակելիս բլոկավորել</string>
    <string name="change_lang">Փոխել լեզուն</string>
</resources>