<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#101010">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/push_nots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3a3a3a"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/push_notifications"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@+id/push_nots"
        android:textSize="20sp"
        android:text="@string/preferences"
        android:drawableEnd="@drawable/right_arrow"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/match_alerts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/preferences"
        app:layout_constraintLeft_toLeftOf="@+id/preferences"
        android:textSize="20sp"
        android:text="@string/match_alerts"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/match_alerts_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#3a3a3a"
        app:layout_constraintLeft_toLeftOf="@+id/preferences"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/match_alerts"
        android:textSize="12sp"
        android:text="@string/match_alerts_2"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/football"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@+id/match_alerts_2"
        android:textSize="20sp"
        android:text="@string/football"
        android:drawableStart="@drawable/white_football"
        android:drawableEnd="@drawable/right_arrow"
        android:drawablePadding="8dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tennis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@+id/football"
        android:textSize="20sp"
        android:text="@string/tennis"
        android:drawableStart="@drawable/white_tennis"
        android:drawableEnd="@drawable/right_arrow"
        android:drawablePadding="8dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/basketball"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@+id/tennis"
        android:textSize="20sp"
        android:text="@string/basketball"
        android:drawableStart="@drawable/white_basketball"
        android:drawableEnd="@drawable/right_arrow"
        android:drawablePadding="8dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hockey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@+id/basketball"
        android:textSize="20sp"
        android:text="@string/hockey"
        android:drawableStart="@drawable/white_hockey"
        android:drawableEnd="@drawable/right_arrow"
        android:drawablePadding="8dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cricket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@+id/hockey"
        android:textSize="20sp"
        android:text="@string/cricket"
        android:drawableStart="@drawable/white_cricket"
        android:drawableEnd="@drawable/right_arrow"
        android:drawablePadding="8dp"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/in_app_nots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#3a3a3a"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cricket"
        android:text="@string/in_app_notifis"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fav_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/in_app_nots"
        app:layout_constraintLeft_toLeftOf="@+id/preferences"
        android:textSize="20sp"
        android:text="@string/fav_match"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fav_league"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/fav_match"
        app:layout_constraintLeft_toLeftOf="@+id/preferences"
        android:textSize="20sp"
        android:text="@string/fav_league"
        />
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/match_alerts_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@+id/push_nots"
        app:layout_constraintTop_toTopOf="@+id/match_alerts"
        app:layout_constraintBottom_toBottomOf="@+id/match_alerts_2"
        style="@style/my_switch"
        android:checked="true"/>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/fav_match_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@+id/push_nots"
        app:layout_constraintTop_toTopOf="@+id/fav_match"
        app:layout_constraintBottom_toBottomOf="@+id/fav_match"
        style="@style/my_switch"
        android:checked="true"/>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/fav_league_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@+id/push_nots"
        app:layout_constraintTop_toTopOf="@+id/fav_league"
        app:layout_constraintBottom_toBottomOf="@+id/fav_league"
        style="@style/my_switch"
        android:checked="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>