<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f1f1f1">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/setting_image"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_height="200dp"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:src="@drawable/android_settings"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/change_pass_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/setting_image"
        android:layout_marginTop="16dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/change_pass"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:text="@string/change_pass"
            android:drawableEnd="@drawable/grey_right_button"
            />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/set_pin_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/change_pass_box"
        android:layout_marginTop="2dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/set_pin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:text="@string/pin_code"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/set_pin_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/close_blocking_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/set_pin_box"
        android:layout_marginTop="2dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/close_blocking"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:text="@string/close_blocking"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/close_block_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/change_lang_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/close_blocking_box"
        android:layout_marginTop="8dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/change_lang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:text="@string/change_pass"
            android:drawableEnd="@drawable/grey_right_button"
            />

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>